ADD case create handler + router + service, case CRUDS, deCOMBOder, REFACTOR migrations, case models
